<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="wifi_text"> Wi-Fi Settings</string>
    <string name="bluetooth_text">Blue-tooth Settings</string>
    <string name="app_name">Emulator</string>
    <string name="action_settings">Settings</string>
    <string name="state">Wifi State : State</string>
    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="remote_service_started">remote_service_started</string>
    <string name="remote_service_label">remote_service_label</string>
	<string name="spinner">spinner</string>
	<string name="choose_one_section">Choose_one_section </string>
	<string name="wifi">wifi</string>
	<string name="bluetooth">bluetooth</string>
	<string name="broadcast">broadcast</string>
	<string name="enable">Wifi enable</string>
	<string name="wifisetting">Setting</string>
	<string name="wifi_ips">wifi_ips</string>
	
</resources>
